--- a/armenfinance/main/templates/main/components/nav.html
+++ b/armenfinance/main/templates/main/components/nav.html
@@ -16,9 +16,8 @@
                 </div>
                 <!-- logo -->
                 <div class="col-5" id="logo-nav">
-                    <a href="">
+                    <a href="{% url 'main:index' %}">
                         <img src="/static/img/logo_transparent.png" alt="">
-
                     </a>
                     <!-- <h3>Armen Finance</h3> -->
                     <!-- insert logo her -->
@@ -26,7 +25,7 @@
 
                 <!-- about us and search bar -->
                 <div class="col-lg-4" id="about-us-nav">
-                    <a href="">About Us</a>
+                    <a href=" {% url 'main:about' %}">About Us</a>
                     <a href="">
                         <span class="fas fa-search"></span>
                     </a>
