new feture added on landing page

--- a/frontend/static/css/main.css
+++ b/frontend/static/css/main.css
@@ -180,7 +180,7 @@ h5 {
     text-align: center;
     font-size: 18px;
     font-weight: 700;
-    color: #343a40;
+    color: #f1f6fa;
     margin-bottom: 30px;
 }
 
