--- a/armenfinance/main/templates/main/index.html
+++ b/armenfinance/main/templates/main/index.html
@@ -157,30 +157,32 @@
     <h3 class="text-center">
         <span class="text-primary">G</span>allery
     </h3>
-    <div class="row">
-        <div class="col-lg-4 gallery-image-div">
-            <div class="gallery-section_1">
-                <img src="/static/img/g1.jpg" alt="" class="gallery-image">
-                <img src="/static/img/g4.jpg" alt="" class="gallery-image">
-                <img src="/static/img/g2.jpg" alt="" class="gallery-image">
-                <img src="/static/img/pexels-snapwire-618613.jpg" alt="" class="gallery-image">
-            </div>
+    <div class="owl-carousel owl-theme">
+        <div class="item">
+            <img src="./static/img/g1.jpg" alt="">
         </div>
-        <div class="col-lg-4 gallery-image-div">
-            <div class="gallery-section_2">
-                <img src="/static/img/pexels-andrea-piacquadio-840996.jpg" alt="" class="gallery-image">
-                <img src="/static/img/g6.jpg" alt="" class="gallery-image">
-                <img src="/static/img/pexels-fauxels-3184433.jpg" alt="" class="gallery-image">
-            </div>
+        <div class="item">
+            <img src="./static/img/g4.jpg" alt="">
+
         </div>
-        <div class="col-lg-4 gallery-image-div">
-            <div class="gallery-section_3">
-                <img src="/static/img/g2.jpg" alt="" class="gallery-image">
-                <img src="/static/img/g5.jpg" alt="" class="gallery-image">
-                <img src="/static/img/g1.jpg" alt="" class="gallery-image">
-            </div>
+        <div class="item">
+            <img src="./static/img/g2.jpg" alt="">
+        </div>
+        <div class="item">
+            <img src="./static/img/pexels-snapwire-618613.jpg" alt="" class="gallery-image">
+        </div>
+        <div class="item">
+            <img src="./static/img/pexels-andrea-piacquadio-840996.jpg" alt="" class="gallery-image">
+        </div>
+        <div class="item">
+            <img src="./static/img/g6.jpg" alt="" class="gallery-image">
+
+        </div>
+        <div class="item">
+            <img src="./static/img/pexels-fauxels-3184433.jpg" alt="" class="gallery-image">
         </div>
     </div>
+
 </div>
 <!-- //gallery -->
 <!-- testimonials -->
