--- a/armenfinance/main/templates/main/components/base.html
+++ b/armenfinance/main/templates/main/components/base.html
@@ -39,7 +39,8 @@
 
     <style>
         #choose-wrfy-footer>a {
-            color: #9b9999;
+            color: #fefefe;
+            text-decoration: underline !important;
         }
     </style>
     <script>
