--- a/armenfinance/main/templates/main/dashboard.html
+++ b/armenfinance/main/templates/main/dashboard.html
@@ -283,6 +283,59 @@
                         </div>
                     </div>
                     <div class="col-lg-12 col-12">
+                        <div class="box">
+                            <div class="box-header with-border">
+                                <h4 class="box-title">Foreign Transactions</h4>
+                            </div>
+                            <div class="box-body">
+                                <div class="table-responsive">
+                                    <table class="table no-margin table-hover">
+                                        <thead>
+                                            <tr class="bg-dark">
+                                                <th class="text-warning">Transaction</th>
+                                                <th class="text-warning">Transaction Time</th>
+                                                <th class="text-warning">Transaction type</th>
+                                                <th class="text-warning">Amount</th>
+                                                <th class="text-warning">Balance</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            {% if foreign_trans %} {% for trans in foreign_trans %}
+                                            <tr>
+                                                <td>
+                                                    <a href=" {% url 'main:foreign-transfer-transactions' trans.transaction_id %}">
+                                                        {{trans.transaction_id}}
+                                                    </a>
+
+                                                </td>
+                                                <td>{{ trans.date }} </td>
+                                                <td>
+                                                    {{ trans.transaction_type }}
+                                                </td>
+                                                <td>
+                                                    {{ trans.amount }}
+                                                </td>
+                                                <td>
+                                                    {{ trans.balance }}
+                                                </td>
+                                            </tr>
+                                            {% endfor %} {% else %}
+
+                                            <tr>
+                                                <td class="text-center">-</td>
+                                                <td class="text-center">-</td>
+                                                <td class="text-center">-</td>
+                                                <td class="text-center">-</td>
+                                                <td class="text-center">-</td>
+                                            </tr>
+                                            {% endif %}
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-12">
                         <div class="box box-inverse box-dark">
                             <div class="box-header with-border">
                                 <h4 class="box-title">Recent Transactions</h4>
